--- a/app/src/main/res/layout/activity_car_order_booking.xml
+++ b/app/src/main/res/layout/activity_car_order_booking.xml
@@ -11,87 +11,271 @@
     android:layout_height="match_parent"
     tools:context="com.vivekapps.avtodock_new.carOrderBookingActivity">
 
-    <EditText
-        android:id="@+id/carOrderName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="100dp"
-        android:ems="10"
-        android:hint="Enter your name"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/carOrderEmail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Enter your Email ID"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carOrderName" />
-
-    <EditText
-        android:id="@+id/carOrderPhone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Enter your phone number"
-        android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carOrderEmail" />
-
-    <EditText
-        android:id="@+id/carOrderAddress"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="Enter your Address"
-        android:inputType="textMultiLine|textPostalAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carOrderPhone" />
-
     <Button
         android:id="@+id/carOrderBookButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="80dp"
         android:text="Book"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carOrderAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/tableLayoutCustomerDetails" />
 
     <TableLayout
         android:id="@+id/tableLayoutLocation"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@+id/carOrderBookButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carOrderAddress">
+        app:layout_constraintTop_toBottomOf="@+id/tableLayoutCustomerDetails"
+        android:background="@android:color/darker_gray"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp">
+    </TableLayout>
 
+    <TableLayout
+        android:id="@+id/tableLayoutCustomerDetails"
+        android:layout_width="0dp"
+        android:layout_height="375dp"
+        android:layout_marginTop="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:layout_weight="0.7">
+            <TableLayout
+                android:id="@+id/custNameSubTable"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/darker_gray"
+                android:paddingTop="1dp"
+                android:paddingBottom="1dp">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/white">
+                    <TextView
+                        android:id="@+id/custNameLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@android:color/darker_gray"
+                        android:text="@string/custNameLabelText"
+                        android:layout_weight="1"
+                        android:textSize="18dp"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="20dp"
+                        android:textAppearance="?android:attr/textAppearanceMedium"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:layout_weight="1">
+                    <EditText
+                        android:id="@+id/custNameEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:inputType="textPersonName"
+                        android:paddingLeft="20dp"/>
+                </TableRow>
+            </TableLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7"
+            android:background="@android:color/darker_gray"
+            android:paddingBottom="1dp">
+            <TableLayout
+                android:id="@+id/custEMailSubTable"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/white">
+                    <TextView
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:id="@+id/custEmailLabel"
+                        android:textColor="@android:color/darker_gray"
+                        android:text="@string/custEmailLabelText"
+                        android:layout_weight="1"
+                        android:textSize="18dp"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="20dp"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:layout_weight="1">
+                    <EditText
+                        android:id="@+id/custEMailEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:inputType="textEmailAddress"
+                        android:paddingLeft="20dp"/>
+                </TableRow>
+            </TableLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7"
+            android:background="@android:color/darker_gray"
+            android:paddingBottom="1dp">
+            <TableLayout
+                android:id="@+id/custPhoneSubTable"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/white">
+                    <TextView
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:id="@+id/custPhoneLabel"
+                        android:textColor="@android:color/darker_gray"
+                        android:text="@string/custPhoneLabelText"
+                        android:layout_weight="1"
+                        android:textSize="18dp"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="20dp"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:layout_weight="1">
+                    <EditText
+                        android:id="@+id/custPhoneEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:inputType="phone"
+                        android:paddingLeft="20dp"/>
+                </TableRow>
+            </TableLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1.7"
+            android:background="@android:color/darker_gray"
+            android:paddingBottom="1dp">
+            <TableLayout
+                android:id="@+id/custAddressSubTable"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:background="@android:color/white">
+                    <TextView
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:id="@+id/custAddressLabel"
+                        android:textColor="@android:color/darker_gray"
+                        android:text="@string/custAddressLabelText"
+                        android:layout_weight="1"
+                        android:textSize="18dp"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="20dp"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:layout_weight="1.5">
+                    <EditText
+                        android:id="@+id/custAddressEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent"
+                        android:inputType="textPostalAddress"
+                        android:paddingLeft="20dp"/>
+                </TableRow>
+            </TableLayout>
+        </TableRow>
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tableLayoutCustomerDetails"
+        android:background="@android:color/darker_gray"
+        android:paddingTop="1dp"
+        android:paddingBottom="1dp">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:layout_weight="1">
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.3"
+                android:id="@+id/bookingInfoTablelayout">
+                <TableRow>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/bookingInfoLabelText"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="15dp"
+                        android:paddingLeft="20dp"
+                        android:paddingTop="3dp"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/bookingInfoDetailsRow">
+                </TableRow>
+            </TableLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/bookingInfoEditLink"
+                android:text="@string/bookingInfoEditLabelText"
+                android:gravity="center"
+                android:layout_weight="0.7"
+                android:textColor="@color/blue"
+                android:textSize="18dp"
+                android:onClick="goBackToPackage"/>
+        </TableRow>
 
     </TableLayout>
 
