Login functionality and basic navigation drawer implemented for logout

--- a/app/src/main/res/layout/activity_vehicle_type_selection.xml
+++ b/app/src/main/res/layout/activity_vehicle_type_selection.xml
@@ -1,17 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawerLayout"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.vivekapps.avtodock_new.vehicleTypeSelectionActivity">
 
-    <ListView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+
+        <ListView
+            android:id="@+id/vehicleSelectionListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:divider="#358ad9"
+            android:dividerHeight="1dp"
+            android:listSelector="#358ad9"
+            app:layout_constraintBottom_toBottomOf="@+id/frame"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        <FrameLayout
+            android:id="@+id/frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/vehicleSelectionListView"
-        android:dividerHeight="1dp"
-        android:divider="#358ad9"
-        android:listSelector="#358ad9"
-        />
-</android.support.constraint.ConstraintLayout>
+        android:layout_gravity="start"
+        app:menu="@menu/nav_items" />
+
+</android.support.v4.widget.DrawerLayout>
